# arnika

./: .editorconfig  .gitignore  .golangci.yml  CMakeLists.txt  CODEFLOW.md  INSTALL.md  KMS.md  LICENSE  Makefile  README.md  SECURITY.md  arnika.service.in  go.mod  go.sum  keyreader.go  main.go  post.sh.in  postun.sh.in  preun.sh.in  ratelimiter.go  udpserver.go  wireguardmikrotik.go  wireguardnetlink.go
.github/workflows/: add-linux-arm64-to-v0.2.4  add-linux-arm64-to-v0.2.4.yml  ci.yml  macsec-integration.yml  release-go126.yml  release.yml  wolfguard-integration.yml
auth/: auth.go  auth_test.go
ci/: Dockerfile.node  Dockerfile.simulator  clab-ci.yaml  pqc-dummy-keys.sh  setup-keys.sh  show-psk.sh  test-kms.sh  verify-keys.sh
ci/macsec/: setup-namespaces.sh  start-nodes.sh  verify.sh
ci/node-a/: start.sh
ci/node-b/: start.sh
ci/wolfguard/: setup-namespaces.sh  start-nodes.sh  verify.sh
cmake/: CMakeDetermineGoCompiler.cmake  flags.cmake
config/: config.go  config_test.go
kdf/: kdf.go  kdf_test.go
keyhandler/: file.go  handler.go  macsec_linux.go  macsec_stub.go  wireguard.go  wolfguard_linux.go  wolfguard_stub.go
kms/: kms.go  kms_test.go
models/: keys.go
repositories/: kms.go  pqc.go  pqc_test.go  wireguard-mikrotik.go  wireguard-netlink.go
services/: keyreader.go  keywriter.go
tools/: mock.go  mock_test.go
utils/: utils.go
wireguard/: wireguard.go
